# pyliter

./: .gitignore  Makefile  README.rst  pyproject.toml
pyliter/: __init__.py  __main__.py  document.py  render.py  scrutinizer.py  style_book.py  token.py
pyliter/color/: __init__.py  catalog.py  color.py  exceptions.py  rgba.py  value.py  value_range.py
pyliter/resources/: 2016-lite_style.yaml  2016_style.yaml  2016a-lite_style.yaml  2016a_style.yaml  2016b-lite_style.yaml  2016b_style.yaml  2017-lite_style.yaml  2017_style.yaml  2017a-lite_style.yaml  2017a_style.yaml  2018-lite_style.yaml  2018_style.yaml  2019-lite_style.yaml  2019_style.yaml  2019a-lite_style.yaml  2019a_style.yaml  __init__.py  beach-lite_style.yaml  beach_style.yaml  camo0-lite_style.yaml  camo0_style.yaml  camo1-lite_style.yaml  camo1_style.yaml  crayola_bright.yaml  crayola_colors.yaml  crayola_fluorescent.yaml  crayola_fragrance.yaml  crayola_jewelry.yaml  crayola_magic.yaml  crayola_metallic.yaml  crayola_scary.yaml  crayola_silver.yaml  css_colors.yaml  default_style.yaml  flower-lite_style.yaml  flower_style.yaml  highway-lite_style.yaml  highway_style.yaml  rustic0_style.yaml  rustic1_style.yaml  (+7 more)
tests/: test_color_color.py  test_color_value8.py
