[tool.poetry]
name = "pyliter"
version = "0.1.2"
description = ""
authors = ["jnyjny <erik.oshaughnessy@gmail.com>"]
license = "Apache-2.0"

[tool.poetry.scripts]
pyliter="pyliter.__main__:pyliter_cli"

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.0"
colorama = "^0.4.3"
pyyaml = "^5.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
