[tool.poetry]
name = "pyliter"
version = "1.0.0"
description = ""
authors = ["jnyjny <erik.oshaughnessy@gmail.com>"]
license = "Apache-2.0"

[tool.poetry.scripts]
pyliter="pyliter.__main__:pyliter_cli"

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.0"
pyyaml = "^5.2"
pyglet = "^1.4.8"

[tool.poetry.dev-dependencies]
pytest = "^5.3.2"
pytest-cov = "^2.8.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
