[tool.poetry]
name = "pyliter"
version = "1.5.0"
description = "Generate color syntax highlighted PNG image from python source files."
readme = "README.rst"
authors = ["jnyjny <erik.oshaughnessy@gmail.com>"]
license = "Apache-2.0"
homepage = "https://github.com/JnyJny/pyliter"
repository = "https://github.com/JnyJny/pyliter"
documentation = "https://github.com/JnyJny/pyliter"

[tool.poetry.scripts]
pyliter="pyliter.__main__:cli"

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.0"
pyyaml = "^5.2"
pyglet = "^1.4.8"
webcolors = "^1.11.1"
typer = "^0.3.2"

[tool.poetry.dev-dependencies]
pytest = "^5.3.2"
pytest-cov = "^2.8.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
